--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "^5.0.0-beta.13",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
